docs/grammar
/* Grammar for the mitchell language.  No guarantees are made that this
 * grammar is LL(1).  Being that restrictive can mean an awkward grammar,
 * and since I'm not even using a parser generator, I can play as fast and
 * loose as I want with the token lookahead.  So here's the grammar,
 * whatever it may be.
 *
 * $Id: grammar,v 1.1 2004/10/13 02:45:57 chris Exp $
 */

/* mitchell - the bootstrapping compiler
 * Copyright (C) 2004 Chris Lumens
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of version 2 of the GNU General Public License as
 * published by the Free Software Foundation.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 */

/* Program-level {{{ */
start ::= module-decl-lst

module-decl ::= MODULE IDENTIFIER ASSIGN DECL proto-lst IN decl-lst END

module-decl-lst ::= module-decl
                  | module-decl module-decl-lst
/* }}} */


/* Expressions {{{ */
expr ::= LBRACK expr-lst RBRACK           /* defines a list */
       | LBRACK record-assn-lst RBRACK    /* defines a record */
       | case-expr
       | decl-expr                        /* creates a new level of scope */
       | if-expr
       | id
       | fun-call
       | INTEGER
       | STRING
       | BOOLEAN

branch-expr ::= id
              | INTEGER
              | STRING
              | BOOLEAN

branch-lst ::= branch-expr MAPSTO expr
             | branch-expr MAPSTO expr COMMA branch-lst

case-expr ::= CASE expr IN branch-lst END

decl-expr ::= DECL decl-lst IN expr END

if-expr ::= IF expr THEN expr ELSE expr

expr-lst ::= expr
           | expr COMMA expr-lst
/* }}} */


/* Declarations {{{ */
decl ::= ty-decl
       | var-decl
       | const-decl
       | fun-decl

decl-lst ::= decl
           | decl decl-lst

proto ::= ty-decl-proto
        | var-decl-proto
        | const-decl-proto
        | fun-decl-proto

proto-lst ::= proto
            | proto proto-lst
/* }}} */


/* Types {{{ */
ty-decl-proto ::= TYPE id

ty-decl ::= ty-decl-proto ASSIGN ty

ty ::= INTEGER
     | STRING
     | BOOLEAN
     | ty LIST                            /* defines a list of type ty */
     | LBRACK id-lst RBRACK               /* defines a record */
     | id                                 /* alias to an existing type */

id-lst ::= IDENTIFIER COLON ty
         | IDENTIFIER COLON ty COMMA id-lst

record-assn-lst ::= IDENTIFIER ASSIGN expr
                  | IDENTIFIER ASSIGN expr COMMA record-assn-lst
/* }}} */


/* Variables {{{ */
var-decl-proto ::= VAR IDENTIFIER COLON ty

var-decl ::= var-decl-proto ASSIGN expr

id ::= id DOT IDENTIFIER
     | IDENTIFIER
/* }}} */


/* Constants {{{ */
const-decl-proto ::= CONST IDENTIFIER COLON ty

const-decl ::= const-decl-proto ASSIGN expr
/* }}} */


/* Functions {{{ */
fun-decl-proto ::= FUNCTION IDENTIFIER COLON ty LPAREN id-lst RPAREN

fun-decl ::= fun-decl-proto ASSIGN expr

fun-call ::= id LPAREN expr-lst RPAREN
           | id LPAREN RPAREN
/* }}} */


/* Terminals {{{ */
ASSIGN ::= ←

BOOLEAN ::= t
          | f

CASE ::= case

COLON ::= :

COMMA ::= ,

CONST ::= ɕ

DECL ::= decl

DOT ::= .

ELSE ::= else

END ::= end

FUNCTION ::= ƒ

IDENTIFIER ::= [^←:,.ƒ[(])τ \t\n][^ \t\n]*

IF ::= if

IN ::= in

INTEGER ::= [0-9]+

LBRACK ::= [

LIST ::= list

LPAREN ::= (

MAPSTO ::= →

MODULE ::= ℳ

RBRACK ::= ]

RPAREN ::= )

STRING ::= ".*"

THEN ::= then

TYPE ::= τ

VAR ::= ʋ
/* }}} */
